2011-09-30  James Monk    <jmonk@cern.ch>
  * fix bug in ATLAS_2010_S8817804 that misidentified the akt4 jets as akt6

2011-09-29  Andy Buckley  <andy@insectnation.org>

	* Converting FinalStateHCM to a slightly more general
	DISFinalState.

2011-09-26  Andy Buckley  <andy@insectnation.org>

	* Adding a default libname argument to rivet-buildplugin. If the
	first argument doesn't have a .so library suffix, then use
	RivetAnalysis.so as the default.

2011-09-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* make-plots: Fixing regex for \physicscoor. Adding "FrameColor"
	option.

2011-09-17  Andy Buckley  <andy@insectnation.org>

	* Improving interactive metadata printout, by not printing
	headings for missing info.

	* Bumping the release number to 1.7.0alpha0, since with these
	SPIRES/Inspire changes and the MissingMomentum API change we need
	more than a minor release.

	* Updating the mkanalysis, BibTeX-grabbing and other places that
	care about analysis SPIRES IDs to also be able to handle the new
	Inspire system record IDs. The missing link is getting to HepData
	from an Inspire code...

	* Using the .info file rather than an in-code declaration to
	specify that an analysis needs cross-section information.

	* Adding Inspire support to the AnalysisInfo and Analysis
	interfaces. Maybe we can find a way to combine the two,
	e.g. return the SPIRES code prefixed with an "S" if no Inspire ID
	is available...

2011-09-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ALICE_2011_S8909580 (strange particle production at 900 GeV)

	* Feed-down correction in ALICE_2011_S8945144

2011-09-16  Andy Buckley  <andy@insectnation.org>

	* Adding ATLAS track jet analysis, modified from the version
	provided by Seth Zenz: ATLAS_2011_I919017. Note that this analysis
	is currently using the Inspire ID rather than the Spires one:
	we're clearly going to have to update the API to handle Inspire
	codes, so might as well start now...

2011-09-14  Andy Buckley  <andy@insectnation.org>
