@@ -1,3 +1,7 @@
+2011-10-11  James Monk    <jmonk@cern.ch>
+  * root2flat was missing the first bin (plus spurious last bin)
+  * my version of bash does not understand the pipe syntax |& in rivet-buildplugin
+
 2011-09-30  James Monk    <jmonk@cern.ch>
   * fix bug in ATLAS_2010_S8817804 that misidentified the akt4 jets as akt6
 
